[package]
name = "lidar_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.8.3", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tracing-appender = "0.2"
bytes = "1.10"
uuid = { version = "1.16", features = ["v4"] }
network-interface = "2.0.1"
socket2 = "0.5.1"
bincode = "2.0.1"